chore: optimize image sending, add run files